--- a/teal.html
+++ b/teal.html
@@ -53,12 +53,12 @@
     .sdot { width: 11px; height: 11px; background: var(--accent-cyan); border-radius: 50%; box-shadow: 0 0 22px var(--accent-cyan); animation: pulse 1.8s infinite; }
     @keyframes pulse { 0%, 100% { opacity: 1; } 50% { opacity: 0.35; } }
 
-    .sidebar { grid-column: 2; grid-row: 2; background: var(--bg-surface); border-left: 1px solid rgba(255,255,255,0.07); padding: 46px 20px 38px; display: flex; flex-direction: column; z-index: 2; }
+    .sidebar { grid-column: 2; grid-row: 2; background: var(--bg-surface); border-left: 1px solid rgba(255,255,255,0.07); padding: 46px 32px 38px 20px; display: flex; flex-direction: column; z-index: 2; }
     .sb { margin-bottom: 26px; padding-bottom: 26px; border-bottom: 1px solid rgba(255,255,255,0.07); }
     .sb:last-child { margin-top: auto; border-bottom: none; }
     .sb-h { font-family: "JetBrains Mono", monospace; font-size: var(--f-2xs); letter-spacing: 0.26em; text-transform: uppercase; color: var(--accent-cyan); margin-bottom: 13px; display: flex; align-items: center; gap: 7px; }
     .sb-h::before { content: "◆"; color: rgba(0,212,255,0.65); }
-    .chips { display: flex; flex-wrap: wrap; gap: 6px; }
+    .chips { display: flex; flex-wrap: wrap; gap: 6px; padding-right: 4px; }
     .chip { font-family: "JetBrains Mono", monospace; font-size: 10.5px; padding: 5px 12px; border-radius: 9999px; background: var(--glass); border: 1px solid var(--glass-border); color: var(--text-body); }
     .chip.core { background: rgba(0,212,255,0.11); border-color: rgba(0,212,255,0.38); color: var(--accent-cyan); font-weight: 500; }
     .contacts { display: flex; flex-direction: column; gap: 9px; }
@@ -323,9 +323,9 @@
       <div class="sb">
         <div class="sb-h">Контакты</div>
         <div class="contacts">
-          <a class="ct" href="mailto:devart@gmail.com">
+          <a class="ct" href="/cdn-cgi/l/email-protection#a1c5c4d7c0d3d5e1c6ccc0c8cd8fc2cecc">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
-            devart@gmail.com
+            <span class="__cf_email__" data-cfemail="abcfceddcad9dfebccc6cac2c785c8c4c6">[email&#160;protected]</span>
           </a>
           <a class="ct" href="https://github.com/Yhooi2">
             <svg viewBox="0 0 24 24"><path d="M12 0C5.37 0 0 5.37 0 12c0 5.31 3.435 9.795 8.205 11.385.6.105.825-.255.825-.57 0-.285-.015-1.23-.015-2.235-3.015.555-3.795-.735-4.035-1.41-.135-.345-.72-1.41-1.23-1.695-.42-.225-1.02-.78-.015-.795.945-.015 1.62.87 1.845 1.23 1.08 1.815 2.805 1.305 3.495.99.105-.78.42-1.305.765-1.605-2.67-.3-5.46-1.335-5.46-5.925 0-1.305.465-2.385 1.23-3.225-.12-.3-.54-1.53.12-3.18 0 0 1.005-.315 3.3 1.23.96-.27 1.98-.405 3-.405s2.04.135 3 .405c2.295-1.56 3.3-1.23 3.3-1.23.66 1.65.24 2.88.12 3.18.765.84 1.23 1.905 1.23 3.225 0 4.605-2.805 5.625-5.475 5.925.435.375.81 1.095.81 2.22 0 1.605-.015 2.895-.015 3.3 0 .315.225.69.825.57A12.02 12.02 0 0024 12c0-6.63-5.37-12-12-12z"/></svg>
@@ -476,12 +476,4 @@
           <a href="https://stepik.org/cert/2331544" target="_blank">Введение в БД</a>
           &nbsp;·&nbsp;
           <a href="https://stepik.org/cert/2346365" target="_blank">Linux</a>
-          &nbsp;·&nbsp;
-          <a href="https://stepik.org/cert/2312005" target="_blank">ОС</a>
-          &nbsp;·&nbsp;
-                <a href="https://stepik.org/cert/2292048" target="_blank">Архитектура ЭВМ</a>
-      </div>
-    </div>
-  </main>
-</div>
-</body>
+          &nbsp;
